refactor(policy): 重构保单域出单命令与条款服务接口
- 在 AnnuityPayoutPlan 中添加 @JsonIgnore 注解避免序列化派生字段
- 删除废弃的 ApiResponse 类文件
- 配置 application.yml 允许 bean 定义覆盖和 Jackson 反序列化容错
- 更新 MySQL 方言配置并调整 Kafka 消费批次大小解决键冲突问题
- 修改 BillingServiceAdapter 导入统一的 ApiResponse 类
- 在 liquibase 配置中新增多个数据库表结构变更脚本
- 重构 ClauseServicePort 接口返回强类型化的条款与责任快照对象
- 更新 ConvertProposalToInsuranceCommand 和 CreateInsuranceDirectlyCommand 使用结构化险种段
- 重构 CreatePolicyCommand 和 CreatePolicyDirectlyCommand 补齐险种段与参与方信息
- 更新 CreateProposalCommand 支持提案段列表与业务流水号
- 删除废弃的 DeductibleRule 值对象
- 删除通用批改回写策略类
- 重构 Insurance 聚合使用结构化险种段与段级核保结论